--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,8 @@ build_flags =
 lib_deps =
     adafruit/Adafruit SSD1306 @ ^2.5.7
     adafruit/Adafruit GFX Library @ ^1.11.5
+    adafruit/Adafruit BME280 Library @ ^2.3.0
+    adafruit/Adafruit Unified Sensor @ ^1.1.14
     rfetick/MPU6050_light @ ^1.1.0
     RF24
     nRF24L01
