--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,13 @@ build_flags =
     -mfix-esp32-psram-cache-issue
 
 lib_deps =
+    mikalhart/TinyGPSPlus @ ^1.0.3
     adafruit/Adafruit SSD1306 @ ^2.5.7
     adafruit/Adafruit GFX Library @ ^1.11.5
     adafruit/Adafruit BME280 Library @ ^2.3.0
     adafruit/Adafruit Unified Sensor @ ^1.1.14
     rfetick/MPU6050_light @ ^1.1.0
+    https://github.com/mprograms/QMC5883LCompass.git @ ^1.2.3
     RF24
     nRF24L01
 
